@@ -31,14 +31,12 @@ import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.Mth;
 import net.minecraft.world.InteractionHand;
-import net.minecraft.world.InteractionResult;
 import net.minecraft.world.InteractionResultHolder;
 import net.minecraft.world.entity.EquipmentSlot;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.entity.Mob;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.*;
-import net.minecraft.world.item.context.UseOnContext;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.DispenserBlock;
 import net.minecraft.world.level.block.entity.BannerPattern;
@@ -105,9 +103,9 @@ public class AerobaticElytraItem extends ElytraItem implements Wearable, Dyeable
 		//noinspection unchecked
 		final List<CreativeTabAbilitySetRecipe> abilitySets =
 		  (List<CreativeTabAbilitySetRecipe>) (List<?>) world.getRecipeManager()
-			 .getRecipes().stream().filter(
-				recipe -> recipe instanceof CreativeTabAbilitySetRecipe
-			 ).collect(Collectors.toList());
+		    .getRecipes().stream().filter(
+			   recipe -> recipe instanceof CreativeTabAbilitySetRecipe
+		    ).toList();
 		for (CreativeTabAbilitySetRecipe abilitySet: abilitySets) {
 			if (groupLabel.equals(abilitySet.group) || groupLabel.equals("search")) {
 				items.add(abilitySet.stack);
@@ -300,10 +298,9 @@ public class AerobaticElytraItem extends ElytraItem implements Wearable, Dyeable
 	
 	@Override
 	public boolean canElytraFly(@NotNull ItemStack stack, @NotNull LivingEntity entity) {
-		if (entity instanceof Player) {
-			Player player = (Player) entity;
+		if (entity instanceof Player player) {
 			Optional<IFlightData> dat = getFlightData(player);
-			if (!dat.isPresent())
+			if (dat.isEmpty())
 				return false;
 			IFlightData fd = dat.get();
 			if (!fd.getFlightMode().is(FlightModeTags.ELYTRA))
@@ -312,7 +309,6 @@ public class AerobaticElytraItem extends ElytraItem implements Wearable, Dyeable
 				return true;
 		}
 		return stack.getDamageValue() < stack.getMaxDamage() - 1;
-		//return AerobaticElytraLogic.canFallFly(stack, entity);
 	}
 	
 	@Override
